<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderActivity">

    <TextView
        android:id="@+id/order_tv_title"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:background="@drawable/menu_background"
        android:text="@string/order"/>

    <Button
        android:id="@+id/order_btn_my_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_tv_title"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/orange"
        android:text="@string/my_order"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/order_iv_img"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/order_btn_my_order"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/drinks" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_iv_img"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/order_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/order_tv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/quantity"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/order_et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_quantity"
            android:inputType="number"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_background" />

        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_tv_title_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:textColor="@color/black"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/order_tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp_100000"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="24sp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/order_btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/order_more"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="@drawable/footer_background"
        android:text="@string/_2021_andreas_jonathan"/>

</RelativeLayout>