<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/splash_tv_binus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="@string/binus"/>

        <TextView
            android:id="@+id/splash_tv_ezy_foody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/ezyfoody"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_above="@+id/splash_iv_binus"/>

    <ImageView
        android:id="@+id/splash_iv_binus"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/binus"/>

</RelativeLayout>